<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llBackGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.deerslab.mathbomb.StartActivity"
    android:orientation="vertical"
    android:background="@drawable/game_background"
    >

    <LinearLayout
        android:id="@+id/llScreen"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@drawable/screen"
        android:layout_margin="1dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/statistics"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textColor="@color/colorConsolText"
            android:gravity="center"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bombsDefused"
                    android:id="@+id/textView2"
                    android:textColor="@color/colorConsolText"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/tvCountBombsDefused"
                    android:textColor="@color/colorConsolText"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="invisible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bombsExploded"
                    android:id="@+id/textView4"
                    android:textColor="@color/colorConsolText"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/tvCountBombsExploded"
                    android:textColor="@color/colorConsolText"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_margin="1dp"
        android:baselineAligned="false"
        android:transitionGroup="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/play"
                android:id="@+id/btnPlay"
                android:layout_weight="1"
                android:background="@drawable/gray_button_selector"
                android:layout_margin="1dp"
                android:textSize="80sp"
                android:textColor="#FFFFFF"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hallOfFame"
                android:id="@+id/btnFame"
                android:layout_weight="2"
                android:background="@drawable/gray_button_selector"
                android:layout_margin="1dp"
                android:textSize="40sp"
                android:textColor="#FFFFFF"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnBonus"
                android:id="@+id/btnBonus"
                android:layout_weight="2"
                android:background="@drawable/gray_button_selector"
                android:layout_margin="1dp"
                android:textSize="40sp"
                android:textColor="#FFFFFF"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings"
                android:id="@+id/btnSett"
                android:layout_weight="2"
                android:background="@drawable/gray_button_selector"
                android:layout_margin="1dp"
                android:textSize="40sp"
                android:textColor="#FFFFFF"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
